[package]
name = "src"
version = "0.1.0"
edition = "2021"


[dependencies]
reqwest = { version = "0.11.13", features = ["json"] } # for requesting via the HTTP protocol

tokio = { version = "1", features = ["full"] } # async runtime

serde = { version = "1.0.152", features = ["derive"] } # seralizing/deseralizing stuff. wish i knew what i tmeant

serde_json = "1.0" # json stuff

rocket = { version = "0.5.0-rc.2", features = ["secrets","json"] } # API/HTTP framework stuff


chrono = "0.4.23" # for  time


url = "2.3.1" # adding queries/params to url


rand = "0.8.5" # random numeru generator xd