[package]
name = "src"
version = "0.1.0"
edition = "2021"


[dependencies]
reqwest = { version = "0.11.13", features = ["json"] } # for requesting via the HTTP protocol

tokio = { version = "1", features = ["full"] } # async runtime

serde = { version = "1.0.152", features = ["derive"] } # seralizing/deseralizing stuff. wish i knew what i tmeant

serde_json = "1.0" # json stuff

rocket = { version = "0.5.0-rc.2", features = ["secrets","json"] } # API/HTTP framework stuff


chrono = "0.4.23" # for  time


url = "2.3.1" # adding queries/params to url


rand = "0.8.5" # random numeru generator xd


sqlite = "0.30.3" # Database


dotenv = "0.15.0" # envioroment or whatever variables


async-trait = "0.1.60"


[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]